--- a/package.json
+++ b/package.json
@@ -13,20 +13,24 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^5.0.0",
-    "@angular/cdk": "^2.0.0-beta.12",
+    "@angular/cdk": "^5.0.0-rc0",
     "@angular/common": "^5.0.0",
     "@angular/compiler": "^5.0.0",
     "@angular/core": "^5.0.0",
     "@angular/forms": "^5.0.0",
     "@angular/http": "^5.0.0",
-    "@angular/material": "^2.0.0-beta.12",
+    "@angular/material": "^5.0.0-rc0",
     "@angular/platform-browser": "^5.0.0",
     "@angular/platform-browser-dynamic": "^5.0.0",
     "@angular/router": "^5.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-beta.5",
+    "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^4.1.0",
     "@ngrx/router-store": "^4.1.0",
     "@ngrx/store": "^4.1.0",
+    "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
+    "ngrx-store-logger": "^0.2.0",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.14"
   },
